Fix card image cropping: match 9:16 aspect ratio, use object-fit contain
Card images are 430x768 (9:16) but containers had wrong aspect ratios,
causing top/bottom text to be cut off. Fixed all card containers:
- CardReveal: 120x214
- DailyCard: 180x322
- Fan cards: 64x114
- Result cards: 60x107
- Shuffle cards: 110x196
- Mini journal cards: 40x72
- Synthesis element: 48x86
All switched from object-fit:cover to object-fit:contain.

Made-with: Cursor

--- a/client/src/components/CardReveal/CardReveal.module.scss
+++ b/client/src/components/CardReveal/CardReveal.module.scss
@@ -15,7 +15,7 @@
 
 .card {
   width: 120px;
-  height: 185px;
+  height: 214px;
   perspective: 1000px;
   cursor: pointer;
   border-radius: $radius-lg;
@@ -70,7 +70,7 @@
 .cardImg {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
