--- a/client/src/components/DailyCard/DailyCard.module.scss
+++ b/client/src/components/DailyCard/DailyCard.module.scss
@@ -25,7 +25,7 @@
 
 .cardBack, .cardFront {
   width: 180px;
-  height: 280px;
+  height: 322px;
   border-radius: $radius-lg;
   cursor: pointer;
   display: flex;
@@ -75,7 +75,7 @@
 .cardImg {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: $radius-lg;
 }
 
