--- a/client/src/pages/JournalPage.module.scss
+++ b/client/src/pages/JournalPage.module.scss
@@ -146,7 +146,7 @@
 
 .miniCard {
   width: 40px;
-  height: 62px;
+  height: 72px;
   border-radius: 4px;
   overflow: hidden;
   flex-shrink: 0;
@@ -157,7 +157,7 @@
 .miniCardImg {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .miniReversed {
